# humanoid_robotics

./: .gitignore  README.md  answers.txt
hw0_group6_sh3264_kl2926_vs2113/: hw0_group6_sh3264_kl2926_vss2113_timestamp.txt
hw1/: answers.txt  hw1_out.txt
hw1/hw1_package/: CMakeLists.txt
hw1/hw1_package/launch/: hw1.launch
hw1/hw1_package/scripts/: publisher.py  subscriber.py
hw1_group6_sh3264_kl2926_vss2113/: README.txt  gitman.yml
hw1_group6_sh3264_kl2926_vss2113/hw1_package/: package.xml
hw1_group6_sh3264_kl2926_vss2113/hw1_package/launch/: hw1.launch
hw1_group6_sh3264_kl2926_vss2113/hw1_package/scripts/: subscriber.py
hw2_group6_sh3264_kl2926_vss2113/: README.txt  answers.txt  part3.py
kathleen_ws/devel/: .catkin  _setup_util.py  setup.sh
kathleen_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall
kathleen_ws/devel/.private/ethercat_trigger_controllers/: .catkin  .rosinstall  setup.sh
kathleen_ws/devel/.private/gazebo_dev/: .catkin
kathleen_ws/devel/.private/gazebo_msgs/: setup.sh
kathleen_ws/devel/.private/gazebo_plugins/: .catkin  .rosinstall  setup.sh
kathleen_ws/devel/.private/gazebo_ros/: .rosinstall  setup.sh
kathleen_ws/devel/.private/joint_trajectory_action/: .rosinstall  setup.sh
kathleen_ws/devel/.private/joint_trajectory_action_tools/: .rosinstall  setup.sh
kathleen_ws/devel/.private/joint_trajectory_generator/: .catkin  setup.sh
kathleen_ws/devel/.private/joy/: setup.sh
kathleen_ws/devel/.private/pr2_app_manager/: setup.sh
kathleen_ws/devel/.private/pr2_arm_kinematics/: .rosinstall
kathleen_ws/devel/.private/pr2_arm_move_ik/: .catkin  .rosinstall  setup.sh
kathleen_ws/devel/.private/pr2_calibration_controllers/: .rosinstall
kathleen_ws/devel/.private/pr2_common_action_msgs/: setup.sh
kathleen_ws/devel/.private/pr2_controller_configuration_gazebo/: .rosinstall  setup.sh
kathleen_ws/devel/.private/pr2_controllers_msgs/: .rosinstall
kathleen_ws/devel/.private/pr2_gazebo/: .rosinstall
kathleen_ws/devel/.private/pr2_gazebo_plugins/: .catkin
kathleen_ws/devel/.private/pr2_gripper_action/: .catkin  (+1 more)
kathleen_ws/logs/ethercat_trigger_controllers/: build.cmake.000.log.stderr
kathleen_ws/logs/gazebo_plugins/: build.make.000.log.stderr  build.make.002.log.stderr  build.make.006.log.stderr
kathleen_ws/logs/gazebo_ros/: build.make.003.log.stderr  build.make.005.log.stderr
kathleen_ws/logs/pr2_teleop_general/: build.cmake.002.log.stderr
kathleen_ws/logs/ps3joy/: build.cmake.001.log.stderr
kathleen_ws/logs/spacenav_node/: build.make.001.log.stderr
kathleen_ws/logs/wiimote/: build.make.007.log.stderr
kathleen_ws/src/gazebo_worlds/: .hg_archival.txt  .hgtags  README.md
kathleen_ws/src/gazebo_worlds/gazebo_plugins/: CMakeLists.txt  projector_with_fixedjoints.patch
kathleen_ws/src/gazebo_worlds/gazebo_plugins/cfg/: GazeboRosCamera.cfg  GazeboRosOpenniKinect.cfg
kathleen_ws/src/gazebo_worlds/gazebo_plugins/src/: gazebo_ros_f3d.cpp  gazebo_ros_force.cpp  gazebo_ros_p3d.cpp  move_model_test.cpp
kathleen_ws/src/gazebo_worlds/gazebo_plugins/test/test_worlds/: gazebo_ros_gpu_laser.world  gazebo_ros_imu.world
kathleen_ws/src/simple_torso/: mainpage.dox
project/Grasping/worlds/: objects_no_fetch.world
project/Speech/: TAR4279.tar  corpus.txt  parse_objectTypes.py
project/Speech/TAR4279/: 4279.lm  4279.sent
project/Speech/TAR7000/: 7000.lm  7000.log_pronounce  7000.sent  7000.vocab
project/fetch_ws/: README.md  README.txt  gitman.yml  grasping_code.py  graspit_plan_grasps.py  move_to_poses.py  moveit_grasp.py  open_close_gripper.py
project/fetch_ws/devel/: .catkin  _setup_util.py  env.sh  setup.zsh
project/fetch_ws/files/: close_gripper.py  close_gripper_1.py  grasp.py  grasp_grip.py  tuck.py
project/fetch_ws/src/world_manager/world_manager/: CMakeLists.txt  package.xml  setup.py
project/fetch_ws/src/world_manager/world_manager/configs/: world_manager.yaml
project/fetch_ws/src/world_manager/world_manager/src/world_manager/: __init__.py  tf_manager.py  world_manager_client.py  world_manager_server.py
project/fetch_ws/src/world_manager/world_manager_msgs/: CMakeLists.txt  package.xml
project/fetch_ws/src/world_manager/world_manager_msgs/msg/: SceneBox.msg
project/fetch_ws/src/world_manager/world_manager_msgs/srv/: AddBox.srv  AddMesh.srv  AddTF.srv
project/grasp_ws/pr2_ws/: README.md
project/kathleen_ws/devel/: env.sh  setup.bash  setup.zsh
project/kathleen_ws/src/gazebo_worlds/gazebo/: CMakeLists.txt  Makefile.gazebo.hg  Makefile.gazebo.tarball  setup.bash
project/kathleen_ws/src/gazebo_worlds/gazebo/include/gazebo/: gazebo_ros_api_plugin.h
project/kathleen_ws/src/gazebo_worlds/gazebo/md5sums/: gazebo-r1307.tgz.md5sum  gazebo-r1319.tgz.md5sum  gazebo-r1321.tgz.md5sum  gazebo-r1335.tgz.md5sum  gazebo-r1416.tgz.md5sum  gazebo-r1639.tgz.md5sum  gazebo-r2105.tgz.md5sum  gazebo-r297814991b7c.tgz.md5sum  gazebo-r29b9feda3428.tgz.md5sum  gazebo-r3615b2e0d9b6.tgz.md5sum  gazebo-r41032aa4700c.tgz.md5sum  gazebo-r4533eaee93a0.tgz.md5sum  gazebo-r4a42518d37a4.tgz.md5sum  gazebo-r62ece9977b26.tgz.md5sum  gazebo-r7086.tgz.md5sum  gazebo-r88428637a5be.tgz.md5sum  gazebo-r8858.tgz.md5sum  gazebo-rb125cd068cfd.tgz.md5sum  gazebo-rd0e79f7d4640.tgz.md5sum  gazebo-rd9edb000a87d.tgz.md5sum  gazebo-rf12d66ee9c7f.tgz.md5sum  gazebo-rf16f3450ff6d.tgz.md5sum
project/kathleen_ws/src/gazebo_worlds/gazebo/patches/: 8993_8998_wg_branch_patches.patch  8993_8998_wg_branch_patches_with_precon.patch  damping.patch  diff_script.sh  disable_gazeborc.patch  experimental_ode_cuda.patch  gazebo_wx_trunk.patch  gazeboros_trunk.patch  plugin_namespace.patch  set_mass.patch  sim_time.patch  stereo_camera.patch
project/kathleen_ws/src/gazebo_worlds/gazebo/scripts/: gazebo  setup.sh  spawn_model
project/kathleen_ws/src/gazebo_worlds/gazebo/src/gazebo/: gazebo_interface.py
project/kl_fetch_ws/devel/: setup.bash
project/speech/: create_lm.py  objectTypes.csv  set_kws_threshold.py
project/speech/TAR4279/: 4279.dic  4279.kwlist  4279.log_pronounce  4279.vocab
project/speech/TAR7000/: 7000.dic
(+3050 files in other folders)
