<?xml version="1.0"?>
<package format="2">
  <name>hw1_package</name>
  <version>0.0.0</version>
  <description>Simple subscriber and publisher in Python that publishes and saves the current time</description>

  <maintainer email="sh3264@columbia.edu">Seungwook Han</maintainer>
  <maintainer email="kl2926@columbia.edu">Kathleen Lee</maintainer>
  <maintainer email="vss2113@columbia.edu">Vladislav Scherbich</maintainer>

  <license>BSD</license>

  <author email="sh3264@columbia.edu">Seungwook Han</author>
  <author email="kl2926@columbia.edu">Kathleen Lee</author>
  <author email="vss2113@columbia.edu">Vladislav Scherbich</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>

